<resources>
    <string name="app_name">ExamenParcial</string>
    <string name="welcome_message">¡Bienvenido al Juego de Preguntas sobre Taylor Swift!</string>
    <string name="start_button_text">Comenzar</string>
    <string name="welcome_image_desc">Imagen de bienvenida</string>
    <string name="hello_blank_fragment">holi\n</string>
    <string name="pregunta">¿Cuál es tu pregunta?</string>
    <string name="opcion1">Opción 1</string>
    <string name="opcion2">Opción 2</string>
    <string name="opcion3">Opción 3</string>
    <string name="opcion4">Opción 4</string>
    <string name="siguiente">Siguiente</string>
    <string name="respuesta_correcta">¡Respuesta Correcta!</string>
    <string name="volverinicio">Volver al inicio</string>

</resources>