<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/imagen1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/welcome_image_desc"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:layout_below="@id/welcome_image"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_below="@id/welcome_message"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
